# blackglass-console

./: .cursorignore  .dockerignore  .env.example  .git-commit-msg.tmp  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  PROJECT_FILES.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  doppler.yaml  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  lighthouserc.json  middleware.ts  migration-output.txt  next.config.ts  package-lock.json  package.json  playwright.config.ts  prospects-a-2026-05-12.csv  prospects-b-2026-05-12.csv  prospects-c-2026-05-12.csv  prospects-combined-2026-05-12.csv  prospects-new-2026-05-12.csv  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.worker.json  vitest.config.ts
blackglass-remediator/: .env.example  README.md  pyproject.toml
blackglass-remediator/app/: __init__.py  main.py
blackglass-remediator/app/agent/: models.py  prompts.py  remediation_agent.py  risk_policy.py  tools.py
blackglass-remediator/app/api/: dependencies.py
blackglass-remediator/app/core/: config.py  logging.py  security.py  telemetry.py
blackglass-remediator/app/domain/: __init__.py  approval.py  drift_event.py  enums.py  recommendation.py  remediation_plan.py  verification_result.py
blackglass-remediator/app/infra/: do_api.py  notifier.py  ollama_client.py  ssh_runner.py
blackglass-remediator/app/infra/db/: models.py
blackglass-remediator/app/services/: approval_service.py  blackglass_client.py  ingest_service.py  planning_service.py  sandbox_service.py  verification_service.py
blackglass-remediator/app/workflows/: remediation_workflow.py  replay_workflow.py
blackglass-remediator/docs/: safety-model.md
blackglass-remediator/tests/: conftest.py  test_agent.py  test_approval_workflow.py  test_blackglass_client.py  test_e2e_happy_path.py  test_models.py  test_risk_policy.py  test_safety_harness.py  test_security.py  test_webhooks.py
(+1043 files in other folders)
