[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackglass-remediator"
version = "0.1.0"
description = "Human-in-the-loop AI Remediation Companion for BLACKGLASS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Pydantic v2
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # PydanticAI agent framework
    "pydantic-ai>=0.0.14",
    # HTTP client
    "httpx>=0.27.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Structured logging
    "structlog>=24.4.0",
    # SSH
    "asyncssh>=2.17.0",
    # Observability
    "sentry-sdk[fastapi]>=2.16.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    # Utilities
    "python-ulid>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "types-python-jose>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing -q"

[tool.coverage.run]
source = ["app"]
omit = ["app/infra/db/migrations/*"]
